Fix overflow of KoLessonMap, use more compact layout or >= 50 items

--- a/src/vite/src/assets/sass/pages/_home-dashboard.scss
+++ b/src/vite/src/assets/sass/pages/_home-dashboard.scss
@@ -180,6 +180,7 @@
 
   &.is-tight > * {
     @apply rounded-sm; // less radius
+    margin: 0 1px 0 0;
   }
 }
 
